# storable

./: .dockerignore  .env.example  .gitignore  Cargo.toml  GEMINI.md  Project Structure.md  docker-compose.yml
crates/storable-api/: Cargo.toml
crates/storable-api/src/: main.rs  services.rs
crates/storable-core/: Cargo.toml
crates/storable-core/src/: auth.rs  errors.rs  fs.rs  lib.rs  metadata.rs  types.rs
crates/storable-db/: Cargo.toml
crates/storable-db/src/: models.rs  repositories.rs
crates/storable-web/: Cargo.toml  Dioxus.toml
crates/storable-web/assets/: tailwind.css
crates/storable-web/src/: main.rs
db/: schema.surql
docker/api/: Dockerfile
docker/db/: schema.surql
docker/web/: Dockerfile
