[package]
name = "storable-api"
version = "0.1.0"
edition = "2021"
description = "HTTP API server for Storable"
license = "MIT"

[dependencies]
storable-core = { path = "../storable-core", version = "0.1.0" }
storable-db   = { path = "../storable-db",   version = "0.1.0" }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
