[package]
name = "storable-web"
version = "0.1.0"
authors = ["HardBoss07 <matteo@bosshard.net>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7.2", features = ["web"] }
tracing = "0.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]